tests/lang/compile_fail/duplicate_alias.expo
alias http.Headers
alias json.Encoder as Headers

fn main
  "unreachable".print()
end
